Fix the issue for setting having audio alternative input/output.

Removed an invalid unit test case HandleOtherDeviceType: We should
not allow random device type to be handled as valid audio device.

Added a new unit test case to cover the scenario of this bug.

Bug: 920843
Change-Id: I21e26641f61912dc8b5e5395624bbfa2c09ee10c
Reviewed-on: https://chromium-review.googlesource.com/c/1406297
Reviewed-by: Jenny Zhang <jennyz@chromium.org>
Reviewed-by: Alex Newcomer <newcomer@chromium.org>
Commit-Queue: Jenny Zhang <jennyz@chromium.org>
Cr-Commit-Position: refs/heads/master@{#622927}
Former-commit-id: 457d1914c82df4b6376280533e92fc67a1c93271